fixed delete dialog broken in last commit 🙄

--- a/assets/main.css
+++ b/assets/main.css
@@ -296,10 +296,6 @@ td {
   padding: 17px 19px 0;
   line-height: 23px;
   position: relative;
-  text-overflow: ellipsis;
-  max-width: 0;
-  overflow: hidden;
-  white-space: nowrap;
 }
 
 table {
@@ -331,6 +327,13 @@ tbody {
 
 #delete-file-list {
   width: 12%;
+}
+
+.overflow-col {
+  text-overflow: ellipsis;
+  max-width: 0;
+  overflow: hidden;
+  white-space: nowrap;
 }
 
 .center-col {
